<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_kamar_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nama_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nama_unit" />

        <EditText
            android:id="@+id/et_awalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_awalan" />

        <EditText
            android:id="@+id/et_angka_pertama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_angka_pertama"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_angka_terakhir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_angka_terakhir"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_harga"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_detail"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/et_max_penyewa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_max_penyewa"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_simpan_kamar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:background="@drawable/button_selector" />

    </LinearLayout>
</ScrollView>