<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@drawable/item_selector">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_door"
            android:contentDescription="@string/door_icon"
            app:tint="@color/primary_color" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/tv_nama_kamar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_nama_kamar"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_nomor_kamar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_nomor_kamar"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_addrent"
            app:tint="@color/primary_color"
            android:contentDescription="@string/add_penyewa"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
